--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-
+  
+  "name":"react-app",
   "version": "0.1.0",
 
   "private": true,
+  "homepage":"http://Chakkuhh.github.io/Portfolio",
 
   "dependencies": {
 
@@ -35,6 +37,7 @@
     "test": "react-scripts test",
 
     "eject": "react-scripts eject",
+    "predeploy":"npm run build",
     "deploy":"gh-pages -d build"
 
   },
